--- a/public/login.html
+++ b/public/login.html
@@ -17,14 +17,14 @@
           <a href=/about>About</a>
         </div>
         <div id=nav-bar-right>
-          <a href=/signup>Sign Up</a>
+          <a id=signup-link href=/signup>Sign Up</a>
         </div>
       </div>
       <header>
         <h1>AFM Interplanetary</h1>
       </header>
       <div id=form-div class="flex-rows center">
-        <form class=flex-cols action=/loginuser method=post>
+        <form class=flex-cols action=/ method=post>
           <h2 class=no-margin-top>Login</h2>
           <input id=username type=text name=username placeholder=Username>
           <div class=left-justify-children> 
@@ -35,6 +35,7 @@
             <p class=form-error id=password-error></p>
           </div>
           <input id=submit-login type=submit value=Login on>
+          <a href=/reset>Forgot your password?</a>
         </form>
       </div>
     </div>
